fix layout issues

--- a/styles/blog.css
+++ b/styles/blog.css
@@ -13,7 +13,6 @@ main {
 
 .content-block {
   margin-top: 1rem;
-  max-width: 1000px;
 }
 
 /* Content block - header */
@@ -30,6 +29,7 @@ main {
 
 .author-details {
   padding-left: 0.5rem;
+  width: 6rem;
 }
 
 .side-img {
@@ -53,7 +53,6 @@ main {
 
 .content-para {
   margin: 1rem 0.5rem 0.5rem 0.5rem;
-  max-width: 800px;
   min-width: 225px;
   flex: 1;
 }
